aboutme obj text cut off fix

--- a/portfolio/static/portfolio/css/style.css
+++ b/portfolio/static/portfolio/css/style.css
@@ -16,7 +16,7 @@ body {
 
 #aboutme {
   background: rgb(30, 30, 30);
-  height: 90vh;
+  height: 95vh;
 }
 
 #aboutme .container {
